release-data/changelogs/8.0/plugins/api-authorizations.adoc
= Changelogs for Rudder plugin api-authorizations 8.0.\* versions

== api-authorizations-8.0.10-2.1 (2024-07-02)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.0.9-2.1 (2024-06-03)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.0.8-2.1 (2024-04-25)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.0.7-2.1 (2024-04-02)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.0.6-2.1 (2024-02-29)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.0.5-2.1 (2024-02-02)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.0.4-2.1 (2023-12-14)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Categories can't be folded in ACL API with authorization plugin
    (https://issues.rudder.io/issues/21724[#21724])

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.0.3-2.1 (2023-11-09)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.0.2-2.1 (2023-11-08)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.0.1-2.1 (2023-10-30)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.0.0-2.1 (2023-10-18)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.0.0.rc2-2.1 (2023-10-13)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.0.0.rc1-2.1 (2023-10-08)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.0.0.beta3-2.1 (2023-10-02)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.0.0.beta2-2.1 (2023-09-15)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.0.0.beta1-2.1 (2023-09-07)

=== Changes


==== Miscellaneous

* Hash API tokens - plugin
    (https://issues.rudder.io/issues/23243[#23243])

==== UI - UX

* Use consistent fonts in Rudder interface - plugins
    (https://issues.rudder.io/issues/23270[#23270])

=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.0.0.alpha1-2.1 (2023-07-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.0 series and therefore all installations of 8.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

