release-data/changelogs/8.2/plugins/api-authorizations.adoc
= Changelogs for Rudder plugin api-authorizations 8.2.\* versions

== api-authorizations-8.2.9-2.2 (2025-09-15)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.2.7-2.2 (2025-06-05)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.2.5-2.2 (2025-02-27)

=== Changes


=== Bug fixes

==== Web - UI & UX

* Fixed: API authorization menu could not open due to CSRF
    (https://issues.rudder.io/issues/26271[#26271])

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.2.4-2.2 (2025-01-13)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.2.3-2.2 (2024-12-03)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.2.2-2.2 (2024-11-29)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.2.1-2.2 (2024-11-28)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.2.0-2.2 (2024-10-29)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.2.0-2.2 (2024-10-29)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.2.0.rc1-2.2 (2024-10-18)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Delete token and create token button are not usable
    (https://issues.rudder.io/issues/25666[#25666])

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.2.0.beta1-2.2 (2024-09-09)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== api-authorizations-8.2.0.alpha1-2.2 (2024-09-09)

=== Changes


==== Refactoring

* Update scala plugin dependencies
    (https://issues.rudder.io/issues/24771[#24771])

=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

